# Medical_RAG_PJI

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  api.py  api_contract.json  app.py  docker-compose.yml  ingest_gemini.py  ingest_hf.py  ingest_local.py  pyproject.toml  requirements.txt
app/: config.py  dependencies.py  main.py  worker.py
app/api/routes/: chat.py  health.py  recommendation.py
app/core/: completeness.py  recommendation.py  shared.py
app/core/rag/: classifier.py  retriever.py
app/core/rag/strategies/: __init__.py  analytical.py  base.py  contextual.py  factual.py  opinion.py
app/llm/: providers.py
app/prompts/: __init__.py  analytical_decompose.txt  chat_system.txt  contextual_reformulate.txt  factual_enhance.txt  opinion_diversity.txt  opinion_viewpoints.txt  query_classifier.txt  rag_answer.txt  recommendation_system.txt
app/schemas/: common.py  completeness.py  request.py  response.py
core/: classifier.py  data_completeness.py  engine.py  llm_config.py  pji_recommendation.py  strategies.py
scripts/: ingest.py
tests/: conftest.py  test_api.py  test_completeness.py
tests/fixtures/: sample_snapshot.json
