[project]
name = "medical-rag-pji"
version = "2.0.0"
description = "PJI Clinical Decision Support - Backend API"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "hoangtung386", email = "levuhoangtung1542003@gmail.com" },
]

dependencies = [
    "langchain==0.3.17",
    "langchain-core==0.3.34",
    "langchain-community==0.3.16",
    "llama-parse==0.5.20",
    "cohere==5.13.1",
    "langchain-cohere==0.3.4",
    "pymilvus==2.5.4",
    "langchain-milvus==0.1.7",
    "groq==0.13.1",
    "langchain-groq==0.2.1",
    "tavily-python==0.5.0",
    "pydantic==2.10.6",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "python-dotenv==1.0.1",
    "google-genai>=1.0.0",
    "pypdf>=4.0.0",
    "setuptools<81",
]

[dependency-groups]
dev = []

[tool.uv]
# pymilvus 2.5.4 needs pkg_resources at runtime
no-build-isolation-package = []
