[project]
name = "medical-rag-pji"
version = "2.0.0"
description = "PJI Clinical Decision Support - Backend API"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "hoangtung386", email = "levuhoangtung1542003@gmail.com" },
]

dependencies = [
    "langchain>=0.3.17,<0.4",
    "langchain-core>=0.3.34,<0.4",
    "langchain-community>=0.3.16,<0.4",
    "cohere>=5.13,<6",
    "langchain-cohere>=0.3.4,<0.4",
    "pymilvus>=2.5.4,<3",
    "langchain-milvus>=0.1.7,<0.2",
    "groq>=0.13,<1",
    "langchain-groq>=0.2.1,<0.3",
    "tavily-python>=0.5.0,<1",
    "pydantic>=2.10,<3",
    "pydantic-settings>=2.0,<3",
    "fastapi>=0.104.0,<1",
    "uvicorn>=0.24.0,<1",
    "python-dotenv>=1.0,<2",
    "pypdf>=4.0.0,<5",
    "setuptools<81",
    # OpenTelemetry
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
    "opentelemetry-exporter-otlp>=1.20",
    "opentelemetry-instrumentation-fastapi>=0.41b0",
    "opentelemetry-instrumentation-logging>=0.41b0",
    # RabbitMQ async consumer
    "aio-pika>=9.4,<10",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[tool.uv]
no-build-isolation-package = []

[tool.pytest.ini_options]
testpaths = ["tests"]
